--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "scripts": {
     "test": "jest --no-cache",
     "clean": "rm -rf lib",
+    "typecheck": "tsc -p src/tsconfig.json",
     "build": "yarn clean && tsc",
-    "eslint": "eslint --max-warnings=0 '**/*.{ts,js,json}' --ignore-path .gitignore",
+    "eslint": "eslint --max-warnings=0 '**/*.{ts,js,json}'",
     "lint": "yarn eslint",
-    "ci": "yarn lint && yarn test && yarn build",
+    "ci": "yarn lint && yarn typecheck && yarn test && yarn build",
     "deploy-npm": "yarn ci && yarn publish"
   },
   "peerDependencies": {
@@ -20,19 +21,20 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.12",
-    "@typescript-eslint/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/parser": "^2.1.0",
-    "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "eslint": "^6.8.0",
+    "eslint-config-maasglobal-ts": "^0.0.2",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-json": "^1.4.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-json": "^2.1.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "fp-ts": "^2.0.0",
-    "jest": "^24.8.0",
+    "jest": "^25.1.0",
     "monocle-ts": "^2.0.0",
     "prettier": "^1.18.2",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.5.1"
   },
   "repository": {
