--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,17 @@
 {
   "extends": [
     "eslint-config-maasglobal-ts"
+  ],
+  "overrides": [
+    {
+      "files": ["src/readme.ts"],
+      "rules": {
+        "@typescript-eslint/consistent-type-definitions": 0,
+        "import/order": 0,
+        "no-restricted-imports": 0,
+        "prettier/prettier": 0,
+        "simple-import-sort/sort": 0
+      }
+    }
   ]
 }
