--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "typecheck": "tsc -p src/tsconfig.json",
     "build": "yarn clean && tsc",
     "eslint": "eslint --max-warnings=0 '**/*.{ts,js,json}'",
+    "eslint-fix": "yarn eslint --fix||true",
+    "prettier": "prettier --write --ignore-path .gitignore --config node_modules/eslint-config-maasglobal-ts/prettierrc.js '**/*.{css,html,js,ts,json,md,yaml,yml}'",
+    "prettify": "yarn eslint-fix && yarn prettier",
     "lint": "yarn eslint",
     "ci": "yarn readme-ts && yarn lint && yarn typecheck && yarn test && yarn build",
     "deploy-npm": "yarn ci && yarn publish --non-interactive",
